Fix issue with z-index

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ html {
     height: 100%;
     position: fixed;
     background-color: #000000;
-    z-index: 15;
+    z-index: 16;
 }
 
 #preloader {
@@ -238,7 +238,7 @@ svg {
 
 .team-members {
     position: relative;
-    z-index: 15;
+    z-index: 16;
 }
 
 section {
@@ -268,7 +268,7 @@ section {
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: 15;
+    z-index: 16;
 }
 
 #demoimage {
